// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTypeSizes should match atlas for arabic 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for bengali 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for burmese 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for cyrillic 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for devanagari 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for gurmukhi 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for latin 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for latinWithDiacritics 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for noAscOrDesc 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for sinhalese 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for tamil 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for thai 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for arabic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.625rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for bengali 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.0625rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 2.125rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for burmese 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for cyrillic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for devanagari 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for gurmukhi 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for latin 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for latinWithDiacritics 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for noAscOrDesc 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for sinhalese 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for tamil 1`] = `
"
    font-size: 0.75rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for thai 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for arabic 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.8125rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for bengali 1`] = `
"
    font-size: 0.75rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for burmese 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for cyrillic 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.8125rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for devanagari 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for gurmukhi 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for latin 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.8125rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for latinWithDiacritics 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.8125rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for noAscOrDesc 1`] = `
"
    font-size: 0.875rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for sinhalese 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for tamil 1`] = `
"
    font-size: 0.625rem;
    line-height: 0.9375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.625rem;
      line-height: 0.9375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.6875rem;
      line-height: 0.9375rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for thai 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match canon for arabic 1`] = `
"
    font-size: 1.5rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.5rem;
      line-height: 3.375rem;
    }
  "
`;

exports[`getTypeSizes should match canon for bengali 1`] = `
"
    font-size: 1.6875rem;
    line-height: 2.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.5rem;
      line-height: 3.5rem;
    }
  "
`;

exports[`getTypeSizes should match canon for burmese 1`] = `
"
    font-size: 1.5rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.875rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 4.5rem;
    }
  "
`;

exports[`getTypeSizes should match canon for cyrillic 1`] = `
"
    font-size: 1.75rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3rem;
    }
  "
`;

exports[`getTypeSizes should match canon for devanagari 1`] = `
"
    font-size: 1.75rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.25rem;
      line-height: 2.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for gurmukhi 1`] = `
"
    font-size: 1.75rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.25rem;
      line-height: 2.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for latin 1`] = `
"
    font-size: 1.75rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3rem;
    }
  "
`;

exports[`getTypeSizes should match canon for latinWithDiacritics 1`] = `
"
    font-size: 1.75rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for noAscOrDesc 1`] = `
"
    font-size: 1.75rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for sinhalese 1`] = `
"
    font-size: 1.5625rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.9375rem;
      line-height: 2.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.625rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for tamil 1`] = `
"
    font-size: 1.375rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.625rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.125rem;
      line-height: 2.875rem;
    }
  "
`;

exports[`getTypeSizes should match canon for thai 1`] = `
"
    font-size: 1.5rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.5rem;
      line-height: 3.25rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for arabic 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for bengali 1`] = `
"
    font-size: 1.375rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.4375rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for burmese 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.625rem;
      line-height: 2.75rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for cyrillic 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for devanagari 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for gurmukhi 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for latin 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for latinWithDiacritics 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for noAscOrDesc 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for sinhalese 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.3125rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2.125rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for tamil 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for thai 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for arabic 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for bengali 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for burmese 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for cyrillic 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for devanagari 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for gurmukhi 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for latin 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for latinWithDiacritics 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for noAscOrDesc 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for sinhalese 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for tamil 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for thai 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for arabic 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for bengali 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.25rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.1875rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for burmese 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 4.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 5.375rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for cyrillic 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for devanagari 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for gurmukhi 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for latin 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for latinWithDiacritics 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 3rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 4.25rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for noAscOrDesc 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for sinhalese 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.8125rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for tamil 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.875rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.875rem;
      line-height: 4.25rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for thai 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.25rem;
      line-height: 3.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.125rem;
      line-height: 4.75rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for arabic 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for bengali 1`] = `
"
    font-size: 1.1875rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.3125rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for burmese 1`] = `
"
    font-size: 1rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.375rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for cyrillic 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for devanagari 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for gurmukhi 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for latin 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for latinWithDiacritics 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for noAscOrDesc 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for sinhalese 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.1875rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.1875rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for tamil 1`] = `
"
    font-size: 0.8125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for thai 1`] = `
"
    font-size: 1rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.625rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for arabic 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for bengali 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.625rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 5.375rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for burmese 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 9rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for cyrillic 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for devanagari 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for gurmukhi 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for latin 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for latinWithDiacritics 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 7.25rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for noAscOrDesc 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for sinhalese 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.3125rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.8125rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for tamil 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 4.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for thai 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for arabic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for bengali 1`] = `
"
    font-size: 0.8125rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.8125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.0625rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for burmese 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.5625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.5625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.9375rem;
      line-height: 1.5625rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for cyrillic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for devanagari 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.3125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.625rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for gurmukhi 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.3125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.625rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for latin 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for latinWithDiacritics 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for noAscOrDesc 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for sinhalese 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.9375rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for tamil 1`] = `
"
    font-size: 0.6875rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.6875rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for thai 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match minion for arabic 1`] = `
"
    font-size: 0.75rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match minion for bengali 1`] = `
"
    font-size: 0.625rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match minion for burmese 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for cyrillic 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for devanagari 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match minion for gurmukhi 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match minion for latin 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for latinWithDiacritics 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for noAscOrDesc 1`] = `
"
    font-size: 0.875rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for sinhalese 1`] = `
"
    font-size: 0.8125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.8125rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.8125rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match minion for tamil 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.625rem;
      line-height: 0.875rem;
    }
  "
`;

exports[`getTypeSizes should match minion for thai 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for arabic 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for bengali 1`] = `
"
    font-size: 1.5rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.5rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for burmese 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 3rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for cyrillic 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for devanagari 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for gurmukhi 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for latin 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for latinWithDiacritics 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for noAscOrDesc 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for sinhalese 1`] = `
"
    font-size: 1.1875rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.4375rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for tamil 1`] = `
"
    font-size: 1rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for thai 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match pica for arabic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match pica for bengali 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.4375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.4375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.0625rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match pica for burmese 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.5625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match pica for cyrillic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match pica for devanagari 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match pica for gurmukhi 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match pica for latin 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match pica for latinWithDiacritics 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match pica for noAscOrDesc 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match pica for sinhalese 1`] = `
"
    font-size: 1.0625rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.0625rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.0625rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match pica for tamil 1`] = `
"
    font-size: 0.75rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match pica for thai 1`] = `
"
    font-size: 1rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match royal for arabic 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for bengali 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.9375rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.25rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for burmese 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 7.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for cyrillic 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for devanagari 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for gurmukhi 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for latin 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for latinWithDiacritics 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 4rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.75rem;
    }
  "
`;

exports[`getTypeSizes should match royal for noAscOrDesc 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for sinhalese 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.625rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.8125rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for tamil 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 3.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 5rem;
    }
  "
`;

exports[`getTypeSizes should match royal for thai 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 3.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for arabic 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for bengali 1`] = `
"
    font-size: 1.5625rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.8125rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.0625rem;
      line-height: 3rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for burmese 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.375rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for cyrillic 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for devanagari 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.75rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for gurmukhi 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.75rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for latin 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for latinWithDiacritics 1`] = `
"
    font-size: 1.375rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for noAscOrDesc 1`] = `
"
    font-size: 1.5rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.625rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for sinhalese 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.6875rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.75rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for tamil 1`] = `
"
    font-size: 1rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for thai 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.875rem;
      line-height: 2.625rem;
    }
  "
`;
